fix: No margin for maincontent on small screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -384,10 +384,6 @@ header {
     flex-wrap: wrap;
   }
 
-  .inside #maincontent {
-    margin-top: 50px;
-  }
-
   .inside #map-container{
     order: -1;
     position: relative;
